modify all post

--- a/_posts/2017-08-21-core-vert.x-concept.md
+++ b/_posts/2017-08-21-core-vert.x-concept.md
@@ -25,8 +25,8 @@ image: "https://upload.wikimedia.org/wikipedia/commons/thumb/c/c4/Vert.x_Logo.sv
 
 ## Core Vert.x 개념
 
-    1. verticle은 무엇인가?
-    2. event-bus는 verticles들과 어떻게 상호작용하는가?
+    - verticle은 무엇인가?
+    - event-bus는 verticles들과 어떻게 상호작용하는가?
 
 ### 쓰레딩과 프로그래밍 모델
 
@@ -70,11 +70,12 @@ image: "https://upload.wikimedia.org/wikipedia/commons/thumb/c/c4/Vert.x_Logo.sv
   JSON이 기존의 다른 언어와 상호교류하기 위해 쓰여진 verticle들을 허용하기위해 format을 변경하더라도 event-bus는 어떠한 데이터의 종류도 허용한다.
   메시지는 자유형태의 문자열 종착점에 보내지게된다. event-bus는 아래와 같은 상호교류패턴들을 지원한다.
 
-    1. 포인트-포인트 메시징
-    2. 요청-응답 메시징
-    3. 단체전송을 위한 구독 / 비구독 메시징
+    - 포인트-포인트 메시징
+    - 요청-응답 메시징
+    - 단체전송을 위한 구독 / 비구독 메시징
 
   event-bus는 비슷한 JVM 절차안에서 정확한 상호교류를 위해 verticle들을 허용한다.
+
     - 네트워크 클러스터링이 활성활될 때, event-bus는 다른 애플리케이션 노드들에 동작하는 verticle들에 메시지를 분배할 수 있다.
     - event-bus는 간단한 TCP 프로토콜을 통해서 써드파티 애플리케이션에 상호교류하는 것에 접근할 수 있다.
     - event-bus는 일반목적의 메시지 연결에 보여질 수 있다. (AMQP, Stomp)
